# nicegui-cadviewer

./: .gitatributes  .gitignore  LICENSE  README.md  pyproject.toml  scan_files.py  setup.md
.github/workflows/: static_build.yml
_help/: .gitkeep  README.md
_help/01__introduction/: A__Concepts.md  README.md
_help/02__application/: A__shortcuts.md  README.md
_models/: README.md  basic.py  new.html
_settings/: .gitkeep  README.md  customizer.yaml  editor.yaml  gallery.yaml  help.yaml  logger.yaml  nice123d.yaml  notes.yaml  ocp_standalone.yaml
_templates/: README.md  get_template_as_dictionary.py
concepts/: README.md  gallery.py  git_integration.py  local_file_main.py  move_view.py  page_layout.py  scrolling.py  settings_test.py  setup.md  tab_special.py  upload.py  upload_file_2.py
concepts/Z__archives/: README.md  gallery.py  git_integration.py  move_view.py  page_layout.py  parameter_group.py  scrolling.py  tab_special.py  test_parameter.py  upload_file.py
concepts/parameters/: parameters_inspect.py  test_line_inspect.py
concepts/settings/: README.md  settings_test.py
concepts/static/: styles.css
data/: README.md
docs/: README.md
models/: basic.py  nice123d_1.html
nice123d/: README.md  __init__.py  __main__.py  app_logging.py  code_editor.py  constants.py  customizer_view.py  help_view.py  main_pages.py  main_views.py  main_window.py  model_viewer.py  note_viewer.py  view_console.py
scripts/: generate_code.py  scan_files.py  test_generate.ps1
src/: README.md
tests/: .gitkeep  README.md  browse.py  editor.yaml  gallery.py  local_file_main.py  settings_test.py  tab_special.py  upload_file.py
tools/: README.md
(+64 files in other folders)
