[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-cadviewer"
version = "0.0.2"
dependencies = [
  "build123d>=0.9.0",
  "ocp_vscode",
  "nicegui",
  "pywebview",
]
description = "A nicegui-based CAD editor and viewer for OCP-based projects like build123d"

[tool.setuptools.packages.find]
where = ["nice123d"]

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 88
