[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nice123d"
version = "0.0.2"
dependencies = [
  "build123d",
  "ocp_vscode",
  "nicegui",
  "pywebview",
]
description = "A nicegui-based CAD editor and viewer for OCP-based projects like build123d"

[tool.setuptools.packages.find]
where = ["src"]
